@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-19T00:43:30Z",
+  "timestamp" : "2022-05-19T16:27:44Z",
   "count_outdated" : 1145,
   "uniques_outdated" : 71,
-  "count" : 1552,
+  "count" : 1539,
   "uniques" : 85,
   "views" : [
     {
       "timestamp": "2022-05-05T00:00:00Z",
-      "count": 59,
-      "count_minmax": [ 59, 59 ],
+      "count": 46,
+      "count_minmax": [ 46, 59 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
