@@ -1,10 +1,10 @@
 {
-  "count": 407,
+  "count": 394,
   "uniques": 3,
   "views": [
     {
       "timestamp": "2022-05-05T00:00:00Z",
-      "count": 59,
+      "count": 46,
       "uniques": 1
     },
     {
