@@ -1,3 +1,10 @@
+2022-05-19T16:27:44Z:
+* notice: last 14d: unq all: 3 394
+* notice: prev accum: outdated-unq outdated-all / unq all: 71 1145 / 85 1552
+* notice: next accum: outdated-unq outdated-all / unq all: 71 1145 / 85 1539
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -13 / +0 +0 -0 -13 / 1 46
+* notice: changed dates: [2022-05-05]
+
 2022-05-19T00:43:30Z:
 * notice: last 14d: unq all: 3 407
 * notice: prev accum: outdated-unq outdated-all / unq all: 70 1144 / 85 1541
